--- a/Shiny, R Markdown and Cloud Computing/Shiny, R Markdown and Cloud Computing.Rmd
+++ b/Shiny, R Markdown and Cloud Computing/Shiny, R Markdown and Cloud Computing.Rmd
@@ -2,7 +2,9 @@
 title: "Shiny, R Markdown and Cloud Computing"
 author: "Cameron Roach"
 date: "4 October 2016"
-output: ioslides_presentation
+output:
+  ioslides_presentation:
+    widescreen: true
 runtime: shiny
 ---
 
