--- a/shiny-r-markdown-and-cloud-computing/shiny-r-markdown-and-cloud-computing.Rmd
+++ b/shiny-r-markdown-and-cloud-computing/shiny-r-markdown-and-cloud-computing.Rmd
@@ -164,17 +164,17 @@ server <- function(input, output) {
   
   
   output$stats <- renderText({
-    xy_stats <- function(e) {
-      if(is.null(e)) return("NULL\n")
+    xy_stats <- function(x) {
+      if(dim(x)[1]==0) return("NULL\n")
       paste0(
         "Advanced statistical calculations\n\n",
-        "xmin = ", round(e$xmin, 1), "\n",
-        "xmax = ", round(e$xmax, 1), "\n",
-        "ymin = ", round(e$ymin, 1), "\n",
-        "ymax = ", round(e$ymax, 1))
+        "wt min = ", min(x$wt), "\n",
+        "wt max = ", max(x$wt), "\n",
+        "mpg min = ", min(x$mpg), "\n",
+        "mpg max = ", max(x$mpg))
     }
     
-    xy_stats(input$plot_brush)
+    xy_stats(brushedPoints(mtcars, input$plot_brush, xvar = "wt", yvar = "mpg"))
   })
 }
 
