--- a/shiny-r-markdown-and-cloud-computing/shiny-r-markdown-and-cloud-computing.Rmd
+++ b/shiny-r-markdown-and-cloud-computing/shiny-r-markdown-and-cloud-computing.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Shiny, R Markdown and Cloud Computing"
 author: "Cameron Roach"
-date: "4 October 2016"
+date: "6 October 2016"
 output:
   ioslides_presentation:
     widescreen: true
@@ -338,4 +338,4 @@ knitr::include_graphics("figures/jupyter.png")
 
 # Questions?
 
-## Thanks for listening ᕙ(◍‿◎)ᕗ
+## Thanks for listening
