Changed ggplot theme.

--- a/energy-integration-rob-slides/energy-integration-ioslides.Rmd
+++ b/energy-integration-rob-slides/energy-integration-ioslides.Rmd
@@ -21,6 +21,7 @@ require(tidyr)
 require(lubridate)
 require(stringr)
 require(ggplot2)
+theme_set(theme_bw())
 require(readr)
 require(quantreg)
 require(foreach)
